fixed carousel overlap and changed preloader

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -302,48 +302,52 @@ section {
 /*--------------------------------------------------------------
 # Preloader
 --------------------------------------------------------------*/
-#preloader {
+#preloader-logo {
   position: fixed;
   inset: 0;
   z-index: 9999;
   overflow: hidden;
   background: #fff;
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
   transition: all 0.6s ease-out;
   width: 100%;
   height: 100vh;
 }
 
-#preloader:before,
-#preloader:after {
+#preloader-logo img:before,
+#preloader-logo img:after {
   content: "";
   position: absolute;
   border: 4px solid var(--color-primary);
   border-radius: 50%;
-  animation: animate-preloader 2s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  animation: animate-preloader-logo 5s cubic-bezier(0, 0.2, 0.8, 1) infinite;
 }
 
-#preloader:after {
-  animation-delay: -0.5s;
+#preloader-logo img:after {
+  animation-delay: -2.5s; /
 }
 
-@keyframes animate-preloader {
+#preloader-logo img{
+  width: 100px;
+  height: 100px;
+  object-fit: contain;
+}
+
+@keyframes animate-preloader-logo {
   0% {
-    width: 10px;
-    height: 10px;
-    top: calc(50% - 5px);
-    left: calc(50% - 5px);
-    opacity: 1;
+    transform: translateY(0); 
+  }
+
+  50% {
+    transform: translateY(-20px);
   }
 
   100% {
-    width: 72px;
-    height: 72px;
-    top: calc(50% - 36px);
-    left: calc(50% - 36px);
-    opacity: 0;
+    transform: translateY(0); 
   }
 }
-
 /*--------------------------------------------------------------
 # Disable aos animation delay on mobile devices
 --------------------------------------------------------------*/
@@ -1326,6 +1330,7 @@ section {
 }
 
 .gallery .swiper-pagination {
+  z-index: 1;
   margin-top: 20px;
   position: relative;
 }
